--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -1,10 +1,9 @@
 .container_MenuBar{
   display: flex;
   justify-content: space-around;
-  // background-color: aqua;
   flex-direction: column;
   padding-top: 24px;
-  border: 2px solid pink;
+  border: thick double whitesmoke;
 }
 
 .menuBar_logo{
@@ -19,19 +18,37 @@
 .menuBar{
   display: flex;
   justify-content: space-around;
-  background-color: blue;
+  background-color: rgb(0, 78, 154, 1);
   color: aliceblue;
   padding-top: 4px;
+  align-items: center;
+  text-align: center;
 }
 
 .picture{
-  display: inline-flex;
-  // border: 20px solid black;
   padding-top: 8px;
+  width: 100%;
 }
 
 .buttonsUnderPicture{
   display: flex;
   justify-content: space-around;
   padding-top: 8px;
+}
+
+.labelAndSeparator{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 20%;
+  align-items: center;
+}
+
+.label{
+  width: 90%;
+  padding-left: 8px;
+}
+
+.line{
+  padding-left: 4px;
 }
