--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("D:\Developer\snowpro-clone\src\utils\image\bg1.png");
+  background-image: url("/src/utils/image/bg1.png");
   background-size: cover;
   background-position: center;
   padding-top: 100px;
