--- a/src/components/NewsElement/style.module.scss
+++ b/src/components/NewsElement/style.module.scss
@@ -5,6 +5,14 @@
 
 .container{
   padding-top: 20px;
+
+  h2{
+    display: flex;
+    color: #369;
+    text-transform:uppercase;
+    background: url("../../utils/image/big_title_bg.png") no-repeat;
+    padding-left: 100px;
+  }
 }
 
 .oneNews{
