--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,13 +7,20 @@
   text-align: center;
 }
 
-.container1{
+.container{
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
-  background-image: url("/src/utils/image/bg1.png");
+  background-image: url("./utils/image/bg1.png");
   background-size: cover;
   background-position: center;
   padding-top: 100px;
   border: thick double rgb(214, 21, 21);
 }
+
+.header__sticky{
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
