--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -1,9 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .container_MenuBar{
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  padding-top: 24px;
-  border: thick double whitesmoke;
+  // padding-top: 24px;
 }
 
 .menuBar_logo{
