--- a/src/components/AdsElement/style.module.scss
+++ b/src/components/AdsElement/style.module.scss
@@ -1,10 +1,4 @@
-.right_element{
-  background-color: whitesmoke;
-  color: aliceblue;
-  width: 25%;  
-}
-
-.right_elementLabel{
+.ads_elementLabel{
   display: flex;
   text-align: center;
   color: #369;
@@ -13,6 +7,6 @@
   padding-left: 100px;
 }
 
-.right_elementDiv{
+.ads_elementDiv{
   padding-top: 24px;
 }
