--- a/src/components/NewsElement/style.module.scss
+++ b/src/components/NewsElement/style.module.scss
@@ -5,6 +5,9 @@
 
 .container{
   padding-top: 20px;
+  background-color: whitesmoke;
+  padding-bottom: 0;
+  margin-bottom: 0;
 
   h2{
     display: flex;
