--- a/src/components/AdsElement/style.module.scss
+++ b/src/components/AdsElement/style.module.scss
@@ -4,7 +4,8 @@
   color: #369;
   text-transform: uppercase;
   background: url("../../utils/image/big_title_bg.png") no-repeat;
-  padding-left: 100px;
+  // padding-left: 100px;
+  justify-content: center;
 }
 
 .ads_elementDiv{
