--- a/src/components/Center/style.module.scss
+++ b/src/components/Center/style.module.scss
@@ -4,7 +4,8 @@
 }
 
 .center{
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  width: 50%;
-  height: 100vh;
+  width: calc(100% - 10px);
 }
