--- a/src/components/Left/style.module.scss
+++ b/src/components/Left/style.module.scss
@@ -1,6 +1,6 @@
 .left_element{
   background-color: whitesmoke;
-  width: 25%;  
+  width: calc(100% - 10px);  
 }
 
 .left_elementLabel{
@@ -9,5 +9,6 @@
   color: #369;
   text-transform:uppercase;
   background: url("../../utils/image/big_title_bg.png") no-repeat;
-  padding-left: 100px;
+  // padding-left: 100px;
+  justify-content: center;
 }
