--- a/src/components/NewsElement/style.module.scss
+++ b/src/components/NewsElement/style.module.scss
@@ -4,6 +4,8 @@
 }
 
 .container{
+  display: flex;
+  flex-direction: column;
   padding-top: 20px;
   background-color: whitesmoke;
   padding-bottom: 0;
@@ -11,17 +13,67 @@
 
   h2{
     display: flex;
+    justify-content: center;
     color: #369;
     text-transform:uppercase;
     background: url("../../utils/image/big_title_bg.png") no-repeat;
-    padding-left: 100px;
+  }
+
+  .news__container{
+    display: flex;
+    padding-top: 24px;
+    align-items: center;
+
+    .news__content{
+      display: flex;
+      flex-direction: column;
+      padding-left: 24px;
+
+      .news__more{
+        display:flex;
+        justify-content:flex-end;
+        padding-top: 24px;
+      }
+
+      .news__more a:hover{
+        color: #f6980c;
+        // box-shadow: 0 16px 36px rgba(246, 152, 12, 0.9);
+        transition: background-color 0.3s ease-in;
+      }
+
+      .news__about{
+        // display: flex;
+        text-align: justify;
+      }
+
+      .news__title{
+        font-size: 1.5rem;
+      }
+      .news__title a:hover{
+        color: #f6980c;
+        // box-shadow: 0 16px 36px rgba(246, 152, 12, 0.9);
+        transition: background-color 0.3s ease-in;
+      }
+    }
+  }
+
+  .news__reference{
+    display: flex;
+    text-align: justify;
+    justify-content: center;
+
+    .news__date{
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  hr{
+    border-style: double;
+    border-width: 1px;
+    border-color: darkblue;
+    margin-top: 4px;
   }
 }
 
-.oneNews{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding-top: 24px;
-  align-items: center;
-}
+
