--- a/src/components/Right/style.module.scss
+++ b/src/components/Right/style.module.scss
@@ -1,7 +1,7 @@
 .right_element{
   background-color: whitesmoke;
   color: aliceblue;
-  width: 25%;  
+  width: calc(100% - 10px);  
 }
 
 .right_elementLabel{
@@ -10,7 +10,8 @@
   color: #369;
   text-transform: uppercase;
   background: url("../../utils/image/big_title_bg.png") no-repeat;
-  padding-left: 100px;
+  // padding-left: 100px;
+  justify-content: center;
 }
 
 .right_elementDiv{
