--- a/src/components/Right/style.module.scss
+++ b/src/components/Right/style.module.scss
@@ -1,7 +1,7 @@
 .right_element{
   background-color: whitesmoke;
   color: aliceblue;
-  width: calc(100% - 10px);  
+  width: 20%;  
 }
 
 .right_elementLabel{
