--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-.App {
-  text-align: center;
-}
-
 .container{
   display: flex;
   flex-direction: column;
@@ -19,6 +15,7 @@
     display: flex;
     padding-top: 24px;
     border: thick double rgb(214, 21, 21);
+    justify-content: center;
   }
 }
 
@@ -32,4 +29,6 @@
   padding: 90px 20px;
   font-size: 16px;
   font-weight: 600;
+  display: flex;
+  justify-content: center;
 }
