--- a/src/components/Header/header_style.scss
+++ b/src/components/Header/header_style.scss
@@ -14,16 +14,30 @@ header{
   right: 0;
   background: none;
   transition: box-shadow, background-color .25s ease;
-  border: 12px dotted red;
+
 }
 
 .header__scrolled{
-  background-color: #fff;
+  background-color: rgba(201, 223, 245, 0.8);
   box-shadow: 0 12px 34px -11px rgb(65, 62, 101, 0.1);
 }
 
 .header__logo{
   height: 60px;
+  z-index: 101;
+}
+
+.header__controls{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  .header__contacts{
+    margin: 12px;
+  }
+  .header__makeOrder{
+    margin: 12px;
+  }
 }
 
 a{
@@ -31,7 +45,7 @@ a{
   color: #213053;
 }
 
-header a{
+.header a{
   font-size: 15px;
   font-weight: 600;
   margin-right: 25px;
@@ -54,3 +68,8 @@ button:hover{
   box-shadow: 0 16px 36px rgba(246, 152, 12, 0.9);
   transition: background-color 0.3s ease-in;
 }
+
+
+
+
+
