header is adding a scrolled class

--- a/src/components/Header/header_style.scss
+++ b/src/components/Header/header_style.scss
@@ -18,7 +18,8 @@ header{
 }
 
 .header__scrolled{
-  background-color: rgba(201, 223, 245, 0.8);
+  // background-color: rgba(201, 223, 245, 0.8);
+  background-color: #fff;
   box-shadow: 0 12px 34px -11px rgb(65, 62, 101, 0.1);
 }
 
