the main page is done

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -14,7 +14,7 @@
   .container1{
     display: flex;
     padding-top: 24px;
-    border: thick double rgb(214, 21, 21);
+    // border: thick double rgb(214, 21, 21);
     justify-content: center;
   }
 }
