--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,16 +1,7 @@
-// footer{
-//   padding: 90px 20px;
-//   font-size: 16px;
-//   font-weight: 600;
-// }
-
 .footer__container{
-  // display:flex;
-  // flex-direction: column;
   justify-content: center;
-  // align-items: center;
   background-color: aliceblue;
-  border: 1px double red;
+  border-radius: 8px;
 
   .footer__label{
     h2{
@@ -18,6 +9,15 @@
       justify-content: center;
       color: #369;
       text-transform:uppercase;
+      text-decoration: underline;
+      padding-top: 24px;
+      padding-bottom: 24px;
+      cursor: pointer;
+    }
+
+    h2:hover{
+      color: #f6980c;
+      transition: background-color 0.3s ease-in;
     }
   }
 
@@ -25,11 +25,14 @@
     margin-top: 40px;
     text-align: center;
     opacity: 0.5;
+
+    .footer__logo{
+      scale: 0.5;
+      cursor: pointer;
+    }
   }
 
-  .footer__group{
-    margin-right: 80px;
-  }
+
   
   .footer__group h3{
     font-size: 16px;
@@ -40,6 +43,7 @@
   .footer__links{
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   
   .footer__links a{
@@ -51,12 +55,25 @@
     justify-content:space-between;
     align-items: center;
     margin: 12px;
+    cursor: pointer;
   }
   
   .footer__info{
     display: flex;
     margin: 12px;
-    justify-content: center;
+    justify-content:space-evenly;
+
+    .footer__group{
+      h3{
+        display: flex;
+        justify-content: center;
+      }
+
+      a:hover{
+        color: #f6980c;
+        transition: background-color 0.3s ease-in;
+      }
+    }
   }
 }
 
