--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -16,6 +16,7 @@
   background-size: cover;
   background-position: center;
   // z-index: 1;
+  cursor: pointer;
 }
 
 .menuBar{
@@ -39,6 +40,11 @@
   display: flex;
   justify-content: space-around;
   padding-top: 8px;
+  padding-bottom: 8px;
+
+  button{
+    background-color: rgb(0, 78, 154, 1);
+  }
 }
 
 .labelAndSeparator{
