add styles for 768 width screen

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,12 +11,12 @@
   background-size: cover;
   background-position: center;
 
-  .container1{
-    display: flex;
-    padding-top: 24px;
-    // border: thick double rgb(214, 21, 21);
-    justify-content: center;
-  }
+  // .container1{
+  //   display: flex;
+  //   padding-top: 24px;
+  //   // border: thick double rgb(214, 21, 21);
+  //   justify-content: center;
+  // }
 }
 
 .header__sticky{
