--- a/src/components/Right/style.module.scss
+++ b/src/components/Right/style.module.scss
@@ -1,7 +1,8 @@
 .right_element{
   background-color: whitesmoke;
   color: aliceblue;
-  width: 20%;  
+  // width: 20%;  
+  width: 100%;
 }
 
 .right_elementLabel{
