--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -41,6 +41,7 @@
   justify-content: space-around;
   padding-top: 8px;
   padding-bottom: 8px;
+  background-color: aliceblue;
 
   button{
     background-color: rgb(0, 78, 154, 1);
