Layout for pads PC is completed

--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -72,4 +72,12 @@
 }
 
 
+@media (max-width: 768px) {
+  .buttonsUnderPicture button{
+    font-size: 1.2rem;
+  }
 
+  .label{
+    font-size: 1.2rem;
+  }
+}
