--- a/src/components/ForumElement/style.module.scss
+++ b/src/components/ForumElement/style.module.scss
@@ -36,3 +36,16 @@
     cursor: pointer;
   }
 }
+
+
+@media (max-width: 768px) {
+  .forumElement{
+    .forumElement__text{
+      padding-top: 4px;
+      font-size: 1.5rem;
+      margin-bottom: 8px;
+      padding-left: 12px;
+      padding-right: 16px;
+    }
+  }
+}
