--- a/src/components/MainPage/style.module.scss
+++ b/src/components/MainPage/style.module.scss
@@ -1,8 +1,7 @@
 .main_page{
   display: grid;
-  // display: flex;
   justify-content: center;
-  // flex-direction: row;
+  flex-direction: row;
   grid-template-columns: 1fr 2fr 1fr;
   padding-top: 24px;
   width: 90%;
@@ -12,14 +11,23 @@
 
 @media (max-width: 768px) {
   .main_page{
-    display: block;
+    display: flex;
     flex-direction: column;
     align-items: center;
-
-    #a{order:2;}
-    #c{order:3;}
-    #b{order:1;}
   }
 
-
+  .left{
+    order:3;
+    width: 95%;
+    margin-top: 4px;
+  }
+  .right{
+    order:2;
+    width: 95%;
+    margin-top: 4px;
+  }
+  .center{
+    order:1;
+    width: 95%;
+  }
 }
