--- a/src/components/NewsElement/style.module.scss
+++ b/src/components/NewsElement/style.module.scss
@@ -35,6 +35,7 @@
       display: flex;
       flex-direction: column;
       padding-left: 24px;
+      padding-right: 12px;
 
       .news__more{
         display:flex;
@@ -108,4 +109,15 @@
   }
 }
 
+@media (max-width: 768px) {
+  .news__date{
+    font-size: 1.2rem;
+  }
+  .news__content{
+    font-size: 1.3rem;
+  }
+  .news__title{
+    font-size: 1.5rem;
+  }
+}
 
