add click handlers for menuBar buttons

--- a/src/components/MenuBar/style.module.scss
+++ b/src/components/MenuBar/style.module.scss
@@ -29,6 +29,8 @@
   text-align: center;
   padding-top: 12px;
   padding-bottom: 12px;
+  width: 70%;
+  border-radius: 12px;
 }
 
 .picture{
@@ -79,5 +81,9 @@
 
   .label{
     font-size: 1.2rem;
+  }
+
+  .menuBar{
+    width: 90%;
   }
 }
