--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -19,6 +19,11 @@
   // }
 }
 
+.container_MenuBar{
+  display: flex;
+  justify-content: space-around;
+}
+
 .header__sticky{
   position: sticky;
   top: 0;
