add layout for phones

--- a/src/components/MainButtons/style.module.scss
+++ b/src/components/MainButtons/style.module.scss
@@ -19,5 +19,10 @@
   .buttonsUnderPicture button{
     font-size: 1.2rem;
   }
+}
 
+@media (max-width: 480px) {
+  .buttonsUnderPicture button{
+    font-size: 1rem;
+  }
 }
