--- a/src/components/Header/header_style.module.scss
+++ b/src/components/Header/header_style.module.scss
@@ -81,9 +81,29 @@ button:hover{
 }
 
 
+
+
 @media (max-width: 768px) {
   button{
     font-size: 25px;
   }
 }
 
+@media (max-width: 480px) {
+  .header__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+  }
+  .header__logo{
+    padding: 0;
+    margin: 0;
+    width:fit-content;
+  }
+  button{
+    font-size: 1.2rem;
+  }
+}
