--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -79,20 +79,19 @@ footer{
   }
 }
 
-@media (max-width: 768px) {
 
-  footer{
-    width: 70%;
+@media (max-width: 820px) {
+
+  .footer__container{
+    width: 100%;
   }
-
   .footer__partners{
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
 
     img{
       margin-top: 20px;
       margin-bottom: 20px;
-      width: 100%;
     }
 
     div{
@@ -115,3 +114,49 @@ footer{
   }
 }
 
+@media (max-width: 480px) {
+
+  .footer__container{
+    width: 100%;
+  }
+
+  .footer__partners{
+    display: flex;
+    flex-direction: column;
+
+    img{
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    div{
+      display: flex;
+      justify-content: center;
+      // width: 40%;
+    }
+  }
+
+  .footer__info{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+    .footer__group{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      h3{
+        font-size: 1.2rem;
+      }
+      .footer__links a{
+        display: flex;
+        justify-content: center;
+      }
+      font-size: 1.1rem;
+    }
+  }
+  .footer__logo{
+    width: 90%;
+  }
+}
