--- a/src/components/ForumElement/style.module.scss
+++ b/src/components/ForumElement/style.module.scss
@@ -38,11 +38,23 @@
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   .forumElement{
     .forumElement__text{
       padding-top: 4px;
       font-size: 1.5rem;
+      margin-bottom: 8px;
+      padding-left: 12px;
+      padding-right: 16px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .forumElement{
+    .forumElement__text{
+      padding-top: 4px;
+      font-size: 1.1rem;
       margin-bottom: 8px;
       padding-left: 12px;
       padding-right: 16px;
