--- a/src/components/Header/header_style.module.scss
+++ b/src/components/Header/header_style.module.scss
@@ -83,7 +83,7 @@ button:hover{
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   button{
     font-size: 25px;
   }
@@ -105,5 +105,26 @@ button:hover{
   }
   button{
     font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+  }
+  .header__logo{
+    padding: 0;
+    margin: 0;
+    img{
+      width: 100%;
+    }
+  }
+  button{
+    font-size: 1.1rem;
   }
 }
