--- a/src/components/MainButtons/style.module.scss
+++ b/src/components/MainButtons/style.module.scss
@@ -15,7 +15,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   .buttonsUnderPicture button{
     font-size: 1.2rem;
   }
@@ -24,5 +24,11 @@
 @media (max-width: 480px) {
   .buttonsUnderPicture button{
     font-size: 1rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .buttonsUnderPicture button{
+    font-size: 0.8rem;
   }
 }
