--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -37,3 +37,15 @@
   display: flex;
   justify-content: center;
 }
+
+@media (max-width: 480px) {
+  .header__sticky{
+    position:static;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__sticky{
+    position:static;
+  }
+}
