--- a/src/components/Header/header_style.module.scss
+++ b/src/components/Header/header_style.module.scss
@@ -9,7 +9,7 @@ body{
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  z-index: 100;
+  // z-index: 100;
   left: 0;
   right: 0;
   background: none;
@@ -17,7 +17,7 @@ body{
   border-radius: 4px;
 
   .header__logo{
-    height: 120px;
+    // height: 120px;
     z-index: 101;
   
     img{
@@ -40,17 +40,16 @@ body{
         color: #f6980c;
         transition: background-color 0.3s ease-in;
       }
-    }
-    
+    }    
     .header__makeOrder{
       margin: 12px;
     }
   }
   
-  .header__scrolled{
-    background-color:whitesmoke;
-    box-shadow: 0 12px 34px -11px rgb(65, 62, 101, 0.1);
-  }
+  // .header__scrolled{
+  //   background-color:whitesmoke;
+  //   box-shadow: 0 12px 34px -11px rgb(65, 62, 101, 0.1);
+  // }
 }
 
 a{
@@ -79,9 +78,6 @@ button:hover{
   color: #f6980c;
   transition: background-color 0.3s ease-in;
 }
-
-
-
 
 @media (max-width: 820px) {
   button{
@@ -116,15 +112,19 @@ button:hover{
     align-self: center;
     align-content: center;
     justify-content: center;
+    padding: 0;
   }
   .header__logo{
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     img{
-      width: 100%;
+      width: 50%;
     }
   }
   button{
-    font-size: 1.1rem;
+    font-size: 0.8rem;
   }
 }
